[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Prefabs/HorizontalTrackSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/AutoResize_ColorRect.gd" type="Script" id=2]
[ext_resource path="res://UI/Menu.tres" type="Theme" id=3]
[ext_resource path="res://UI/Fonts/Title.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/Button_QuitGame.gd" type="Script" id=5]
[ext_resource path="res://Scripts/MenuHorizontal.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Prefabs/SliderWithTextEdit.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/ButtonWithSound.gd" type="Script" id=8]
[ext_resource path="res://Scripts/SliderWithAudio.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Button_LoadScene.gd" type="Script" id=10]

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enable = true

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="Menus" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
extraWidth = 100

[node name="Main" type="Control" parent="Menus"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Menus/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.5
margin_top = -96.0
margin_right = 304.5
margin_bottom = 278.0
mouse_filter = 1
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/Main/MarginContainer"]
margin_right = 609.0
margin_bottom = 374.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Race" type="Button" parent="Menus/Main/MarginContainer/VBoxContainer"]
margin_right = 609.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
action_mode = 0
text = "Race"
script = ExtResource( 8 )

[node name="Options" type="Button" parent="Menus/Main/MarginContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 609.0
margin_bottom = 170.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
action_mode = 0
text = "Options"
script = ExtResource( 8 )

[node name="Quit" type="Button" parent="Menus/Main/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 609.0
margin_bottom = 265.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
action_mode = 0
text = "Quit"
script = ExtResource( 5 )
QuitOptions = {
"color": Color( 0, 0, 0, 1 ),
"ease": 1.0,
"pattern": "fade",
"speed": 2.0
}

[node name="TextureRect" type="TextureRect" parent="Menus/Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -766.0
margin_top = 151.0
margin_right = 766.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="Menus/Main/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Race Director"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="Control" parent="Menus"]
margin_left = 1920.0
margin_right = 3840.0
margin_bottom = 1080.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Menus/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.5
margin_top = -96.0
margin_right = 304.5
margin_bottom = 278.0
mouse_filter = 1
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/Options/MarginContainer"]
margin_right = 609.0
margin_bottom = 374.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="Button" parent="Menus/Options/MarginContainer/VBoxContainer"]
margin_right = 609.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
action_mode = 0
text = "Options"
script = ExtResource( 8 )

[node name="Volume" type="HSplitContainer" parent="Menus/Options/MarginContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 609.0
margin_bottom = 128.0
split_offset = 10

[node name="Label" type="Label" parent="Menus/Options/MarginContainer/VBoxContainer/Volume"]
margin_right = 105.0
margin_bottom = 33.0
text = "Volume"

[node name="PanelContainer" type="PanelContainer" parent="Menus/Options/MarginContainer/VBoxContainer/Volume"]
margin_left = 117.0
margin_right = 609.0
margin_bottom = 33.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/Options/MarginContainer/VBoxContainer/Volume/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 485.0
margin_bottom = 26.0
alignment = 1

[node name="VolumeSlider" type="HSlider" parent="Menus/Options/MarginContainer/VBoxContainer/Volume/PanelContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 478.0
margin_bottom = 17.0
script = ExtResource( 9 )

[node name="Back" type="Button" parent="Menus/Options/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 609.0
margin_bottom = 223.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
action_mode = 0
text = "Back"
script = ExtResource( 8 )
pressed_FMOD_path = "event:/UI/Nav_Back"

[node name="RaceDetails" type="Control" parent="Menus"]
margin_left = -1920.0
margin_bottom = 1080.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Menus/RaceDetails"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.5
margin_top = -96.0
margin_right = 407.5
margin_bottom = 278.0
mouse_filter = 1
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/RaceDetails/MarginContainer"]
margin_right = 712.0
margin_bottom = 374.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TrackSelect" type="HBoxContainer" parent="Menus/RaceDetails/MarginContainer/VBoxContainer"]
margin_right = 712.0
margin_bottom = 47.0

[node name="PanelContainer" type="PanelContainer" parent="Menus/RaceDetails/MarginContainer/VBoxContainer/TrackSelect"]
margin_right = 84.0
margin_bottom = 47.0
mouse_filter = 1

[node name="Label" type="Label" parent="Menus/RaceDetails/MarginContainer/VBoxContainer/TrackSelect/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 77.0
margin_bottom = 40.0
text = "Track"

[node name="HorizontalTrackSelect01" parent="Menus/RaceDetails/MarginContainer/VBoxContainer/TrackSelect" instance=ExtResource( 1 )]
margin_left = 88.0
margin_top = 0.0
margin_right = 712.0
margin_bottom = 47.0
mouse_filter = 1

[node name="SliderWithTextEdit" parent="Menus/RaceDetails/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 67.0
margin_right = 712.0
margin_bottom = 114.0
leftText = "Cars:"
minValue = 2
maxValue = 12

[node name="HSeparator" type="HSeparator" parent="Menus/RaceDetails/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 712.0
margin_bottom = 138.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/RaceDetails/MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 712.0
margin_bottom = 233.0

[node name="Start" type="Button" parent="Menus/RaceDetails/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
text = "Start"
script = ExtResource( 10 )

[node name="VSeparator" type="VSeparator" parent="Menus/RaceDetails/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 358.0
margin_bottom = 75.0

[node name="Back" type="Button" parent="Menus/RaceDetails/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 712.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 3 )
action_mode = 0
text = "Back"
script = ExtResource( 8 )
pressed_FMOD_path = "event:/UI/Nav_Back"

[node name="CanStopInCenterTimer" type="Timer" parent="Menus"]
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="Menus/Main/MarginContainer/VBoxContainer/Race" to="Menus" method="move_left"]
[connection signal="pressed" from="Menus/Main/MarginContainer/VBoxContainer/Options" to="Menus" method="move_right"]
[connection signal="pressed" from="Menus/Options/MarginContainer/VBoxContainer/Back" to="Menus" method="move_left"]
[connection signal="pressed" from="Menus/RaceDetails/MarginContainer/VBoxContainer/HBoxContainer/Back" to="Menus" method="move_right"]
[connection signal="timeout" from="Menus/CanStopInCenterTimer" to="Menus" method="canStopInCenterTimer_ended"]
